Add export plugin to export the current list of events
Also includes a corresponding file loaded to load the exported events

--- a/configure.ac
+++ b/configure.ac
@@ -185,6 +185,7 @@ AC_CONFIG_FILES([Makefile
                  docs/reference/version.xml
                  pixmaps/Makefile
                  plugins/Makefile
+                 plugins/export/Makefile
                  plugins/fdr/Makefile
                  plugins/filters/Makefile
                  plugins/graphviz/Makefile
