Ensure we explicitly add the typelib path to gir - fixes #1
For a complete fix for issue #1 the environment variable
XDG_DATA_DIRS needs to be set also when running replay:

XDG_DATA_DIRS=$HOME/local/share:/usr/share:/usr/local/share ~/local/bin/replay

--- a/replay/Makefile.am
+++ b/replay/Makefile.am
@@ -4,6 +4,7 @@ AM_CFLAGS =     $(WARNING_CFLAGS) \
 		-DREPLAY_DATADIR=\""$(datadir)/$(PACKAGE)"\" \
 		-DREPLAY_TEXTURES_DIR=\""$(datadir)/$(PACKAGE)/textures"\" \
 		-DLIBDIR=\""$(libdir)"\" \
+		-DTYPELIBDIR=\""$(typelibdir)"\" \
 		-DSYSCONFDIR=\""$(sysconfdir)"\" \
 		-DPREFIX=\""$(prefix)"\" \
 		-I$(top_srcdir) \
