--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = pixmaps export fdr filters playback search
+SUBDIRS = pixmaps export causeway fdr filters playback search
 
 if BUILD_GRAPHVIZ
 SUBDIRS += graphviz
